# pqc-aba-demonstrator

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
app/: api.py  authority.py  gen_test_users.py  prover.py  verifier.py  wallet.py
code/: CMakeLists.txt
code/include/: params.h  random.h
code/tools/: create_credentials.c  generate_proof.c  verify_proof.c
docs/: Benchmark.xlsx
frontend/: index.html
